# openFHE-sign-approximation

./: CMakeLists.txt  Point.cpp  Point.h  README.md  remez.cpp
